; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dpk_path_select.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dpk_path_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

@RF_PATH_A = common dso_local global i32 0, align 4
@RF_PATH_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtw_dev*)* @rtw8822c_dpk_path_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtw8822c_dpk_path_select(%struct.rtw_dev* %0) #0 {
  %2 = alloca %struct.rtw_dev*, align 8
  store %struct.rtw_dev* %0, %struct.rtw_dev** %2, align 8
  %3 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %4 = load i32, i32* @RF_PATH_A, align 4
  %5 = call i32 @rtw8822c_dpk_calibrate(%struct.rtw_dev* %3, i32 %4)
  %6 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %7 = load i32, i32* @RF_PATH_B, align 4
  %8 = call i32 @rtw8822c_dpk_calibrate(%struct.rtw_dev* %6, i32 %7)
  %9 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %10 = load i32, i32* @RF_PATH_A, align 4
  %11 = call i32 @rtw8822c_dpk_on(%struct.rtw_dev* %9, i32 %10)
  %12 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %13 = load i32, i32* @RF_PATH_B, align 4
  %14 = call i32 @rtw8822c_dpk_on(%struct.rtw_dev* %12, i32 %13)
  %15 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %16 = call i32 @rtw8822c_dpk_cal_coef1(%struct.rtw_dev* %15)
  ret void
}

declare dso_local i32 @rtw8822c_dpk_calibrate(%struct.rtw_dev*, i32) #1

declare dso_local i32 @rtw8822c_dpk_on(%struct.rtw_dev*, i32) #1

declare dso_local i32 @rtw8822c_dpk_cal_coef1(%struct.rtw_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
